2007-05-19  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbmc.c: make things buildable with
	libxklavier 3.2

2007-05-17  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbmc.c, gnome-keyboard-properties.glade:
	adding vendor list to the box (option, if there are vendors in
	base.xml)

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.c: (create_dialog):
	* gnome-keyboard-properties.glade: set button images via code instead
	of relying on glade, so they respect the gtk-button-images xsetting

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* keyboard.desktop.in.in: renamed Bugzilla product.

2007-03-27  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h, gnome-keyboard-properties-xkbpv.c,
	gnome-keyboard-properties.glade, gnome-keyboard-properties-xkbltadd.c:
	new version of the layout chooser, comboboxentry-based. Fully
	functional (I hope).

2007-03-21  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c, Makefile.am,
	gnome-keyboard-properties-xkbltadd.c: split the layout chooser into
	separate C file

2007-03-18  Jens Granseuer  <jensgr@gmx.net>

        Patch by: Andreas Koehler <andi5.py@gmx.net>

	* gnome-keyboard-properties.glade: use automatic instead of always
        scrollbar policy for the layout selection dialog (fixes #345884)

2007-03-18  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkblt.c:
	(xkb_layouts_prepare_selected_tree): use a radio button instead of a
	checkbox to indicate the default layout. Fixes #389469.

2007-02-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkblt.c: (def_group_in_gconf_changed):
	add another NULL check. Should really fix #398631.

2007-01-21  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: the capplet should not crash if
	default group is not set in GConf (i.e. GConf part of the g-c-c
	installation failed for some reason). Closing #398631
